Finished DOM logic, working on CSS

--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <script src="index.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="gameContainer">
+      <h1 class="gameText" id="playerResult">Player:</h1>
+      <h1 class="gameText" id="computerResult">Computer:</h1>
+      <h1 class="gameText" id="gameRound">Round:</h1>
+      <h1 class="gameText" id="gameScore"></h1>
+      <h1 class="gameText" id="gameResult"></h1>
+      <button class="choiceBtn">Rock</button>
+      <button class="choiceBtn">Paper</button>
+      <button class="choiceBtn">Scissors</button>
+    </div>
+  </body>
 </html>
