Added an Restart button, you can restart the game now!

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button class="choiceBtn">Rock</button>
       <button class="choiceBtn">Paper</button>
       <button class="choiceBtn">Scissors</button>
+      <button class="restartBtn">Restart Game</button>
     </div>
   </body>
 </html>
