Added starting game text, basic CSS and fully responsiveness.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <div id="gameContainer">
+    <main id="gameContainer">
       <h1 class="gameText" id="playerResult">Player:</h1>
       <h1 class="gameText" id="computerResult">Computer:</h1>
       <h1 class="gameText" id="gameRound">Round:</h1>
       <h1 class="gameText" id="gameScore"></h1>
       <h1 class="gameText" id="gameResult"></h1>
-      <button class="choiceBtn">Rock</button>
-      <button class="choiceBtn">Paper</button>
-      <button class="choiceBtn">Scissors</button>
-      <button class="restartBtn">Restart Game</button>
-    </div>
+      <div class="btnContainer">
+        <button class="choiceBtn">Rock</button>
+        <button class="choiceBtn">Paper</button>
+        <button class="choiceBtn">Scissors</button>
+        <button class="restartBtn">Restart Game</button>
+      </div>
+    </main>
   </body>
 </html>
