--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="index.js" defer></script>
+    <script src="./js/index.js" defer></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>RPS GAME</title>
   </head>
   <body>
     <main id="gameContainer">
-      <h1 class="gameText" id="playerResult">Player:</h1>
-      <h1 class="gameText" id="computerResult">Computer:</h1>
-      <h1 class="gameText" id="gameRound">Round:</h1>
-      <h1 class="gameText" id="gameScore"></h1>
+      <p class="gameText" id="playerResult">Player:</p>
+      <p class="gameText" id="computerResult">Computer:</p>
+      <p class="gameText" id="gameRound">Round:</p>
+      <p class="gameText" id="gameScore"></p>
       <h1 class="gameText" id="gameResult"></h1>
       <div class="btnContainer">
         <button class="choiceBtn">Rock</button>
